; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_bg_pmove.c_PM_CheckWaterJump.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_bg_pmove.c_PM_CheckWaterJump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 (i32*, i32)*, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32, i32*, i32, i32, i32 }
%struct.TYPE_5__ = type { i32* }

@pm = common dso_local global %struct.TYPE_6__* null, align 8
@qfalse = common dso_local global i32 0, align 4
@pml = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@CONTENTS_SOLID = common dso_local global i32 0, align 4
@PMF_TIME_WATERJUMP = common dso_local global i32 0, align 4
@qtrue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @PM_CheckWaterJump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @PM_CheckWaterJump() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 2
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %0
  %12 = load i32, i32* @qfalse, align 4
  store i32 %12, i32* %1, align 4
  br label %108

13:                                               ; preds = %0
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp ne i32 %16, 2
  br i1 %17, label %18, label %20

18:                                               ; preds = %13
  %19 = load i32, i32* @qfalse, align 4
  store i32 %19, i32* %1, align 4
  br label %108

20:                                               ; preds = %13
  %21 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @pml, i32 0, i32 0), align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32*, i32** %4, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 0
  store i32 %23, i32* %25, align 4
  %26 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @pml, i32 0, i32 0), align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 1
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** %4, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 1
  store i32 %28, i32* %30, align 4
  %31 = load i32*, i32** %4, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 2
  store i32 0, i32* %32, align 4
  %33 = load i32*, i32** %4, align 8
  %34 = call i32 @VectorNormalize(i32* %33)
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 2
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 4
  %39 = load i32, i32* %38, align 8
  %40 = load i32*, i32** %4, align 8
  %41 = load i32*, i32** %2, align 8
  %42 = call i32 @VectorMA(i32 %39, i32 30, i32* %40, i32* %41)
  %43 = load i32*, i32** %2, align 8
  %44 = getelementptr inbounds i32, i32* %43, i64 2
  %45 = load i32, i32* %44, align 4
  %46 = add nsw i32 %45, 4
  store i32 %46, i32* %44, align 4
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %48 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %47, i32 0, i32 1
  %49 = load i32 (i32*, i32)*, i32 (i32*, i32)** %48, align 8
  %50 = load i32*, i32** %2, align 8
  %51 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %52 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %51, i32 0, i32 2
  %53 = load %struct.TYPE_4__*, %struct.TYPE_4__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i32 0, i32 3
  %55 = load i32, i32* %54, align 4
  %56 = call i32 %49(i32* %50, i32 %55)
  store i32 %56, i32* %3, align 4
  %57 = load i32, i32* %3, align 4
  %58 = load i32, i32* @CONTENTS_SOLID, align 4
  %59 = and i32 %57, %58
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %63, label %61

61:                                               ; preds = %20
  %62 = load i32, i32* @qfalse, align 4
  store i32 %62, i32* %1, align 4
  br label %108

63:                                               ; preds = %20
  %64 = load i32*, i32** %2, align 8
  %65 = getelementptr inbounds i32, i32* %64, i64 2
  %66 = load i32, i32* %65, align 4
  %67 = add nsw i32 %66, 16
  store i32 %67, i32* %65, align 4
  %68 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %69 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %68, i32 0, i32 1
  %70 = load i32 (i32*, i32)*, i32 (i32*, i32)** %69, align 8
  %71 = load i32*, i32** %2, align 8
  %72 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %73 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %72, i32 0, i32 2
  %74 = load %struct.TYPE_4__*, %struct.TYPE_4__** %73, align 8
  %75 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %74, i32 0, i32 3
  %76 = load i32, i32* %75, align 4
  %77 = call i32 %70(i32* %71, i32 %76)
  store i32 %77, i32* %3, align 4
  %78 = load i32, i32* %3, align 4
  %79 = icmp ne i32 %78, 0
  br i1 %79, label %80, label %82

80:                                               ; preds = %63
  %81 = load i32, i32* @qfalse, align 4
  store i32 %81, i32* %1, align 4
  br label %108

82:                                               ; preds = %63
  %83 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @pml, i32 0, i32 0), align 8
  %84 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %85 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %84, i32 0, i32 2
  %86 = load %struct.TYPE_4__*, %struct.TYPE_4__** %85, align 8
  %87 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %86, i32 0, i32 1
  %88 = load i32*, i32** %87, align 8
  %89 = call i32 @VectorScale(i32* %83, i32 200, i32* %88)
  %90 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %91 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %90, i32 0, i32 2
  %92 = load %struct.TYPE_4__*, %struct.TYPE_4__** %91, align 8
  %93 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %92, i32 0, i32 1
  %94 = load i32*, i32** %93, align 8
  %95 = getelementptr inbounds i32, i32* %94, i64 2
  store i32 350, i32* %95, align 4
  %96 = load i32, i32* @PMF_TIME_WATERJUMP, align 4
  %97 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %98 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %97, i32 0, i32 2
  %99 = load %struct.TYPE_4__*, %struct.TYPE_4__** %98, align 8
  %100 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %99, i32 0, i32 2
  %101 = load i32, i32* %100, align 8
  %102 = or i32 %101, %96
  store i32 %102, i32* %100, align 8
  %103 = load %struct.TYPE_6__*, %struct.TYPE_6__** @pm, align 8
  %104 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %103, i32 0, i32 2
  %105 = load %struct.TYPE_4__*, %struct.TYPE_4__** %104, align 8
  %106 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %105, i32 0, i32 0
  store i32 2000, i32* %106, align 8
  %107 = load i32, i32* @qtrue, align 4
  store i32 %107, i32* %1, align 4
  br label %108

108:                                              ; preds = %82, %80, %61, %18, %11
  %109 = load i32, i32* %1, align 4
  ret i32 %109
}

declare dso_local i32 @VectorNormalize(i32*) #1

declare dso_local i32 @VectorMA(i32, i32, i32*, i32*) #1

declare dso_local i32 @VectorScale(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
